# BreachAlpha

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  start_servers.py  test_preprocess.py  test_timing.py
.github/workflows/: ci.yml
.superpowers/brainstorm/: server-stdout.txt
.superpowers/brainstorm/session-1/state/: server-stopped
breachalpha/: __init__.py  __main__.py  breach_loader.py  breach_search.py  cli.py  data_sources.py  explainability.py  feature_engine.py  llm_integration.py  model.py  preprocessor.py  server.py  stock_loader.py  ticker_resolver.py  ticker_search.py
breachalpha/core/: http.py
breachalpha/routes/: llm.py  search.py
breachalpha/services/: scoring.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DECISIONS.md  TESTING.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/explain/: ExplainabilityPanel.jsx
frontend/src/components/layout/: Header.jsx  TabBar.jsx
frontend/src/components/score/: ScoreForm.jsx
frontend/src/components/settings/: SettingsPanel.jsx
frontend/src/components/upload/: BatchResults.jsx  DatasetPreview.jsx
tests/: test_breach_loader.py  test_explainability.py  test_feature_engine.py  test_model.py  test_preprocessor.py  test_server.py  test_ticker_resolver.py  test_ticker_search.py
