[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "breachalpha"
version = "0.1.0"
description = "BreachAlpha — quantify financial impact of cybersecurity incidents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2.36",
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.24.0",
]

[project.scripts]
breachalpha = "breachalpha.cli:main"

[tool.setuptools.packages.find]
include = ["breachalpha*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["breachalpha"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60
